--- a/wpf-tmca/View/UserControls/Toolbox.xaml
+++ b/wpf-tmca/View/UserControls/Toolbox.xaml
@@ -5,8 +5,12 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:wpf_tmca.View.UserControls"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
-    </Grid>
+             d:DesignHeight="300" d:DesignWidth="120">
+    <StackPanel>
+        <Button Content="New Class" Command="{Binding AddClassCommand}" Width="100" Height="70" Margin="10"/>
+        <Separator Margin="5"/>
+        <Button Content="New Association" Command="{Binding AddAssociationCommand}" Width="100" Height="70" Margin="10"/>
+        <Separator Margin="5"/>
+        <Button Content="New TextBox" Command="{Binding AddTextBoxCommand}" Width="100" Height="70" Margin="10"/>
+    </StackPanel>
 </UserControl>
