--- a/wpf-tmca/View/UserControls/Toolbar.xaml
+++ b/wpf-tmca/View/UserControls/Toolbar.xaml
@@ -6,7 +6,32 @@
              xmlns:local="clr-namespace:wpf_tmca.View.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
-    </Grid>
+    <ToolBar ToolBarTray.IsLocked="True" Background="WhiteSmoke">
+        <Button ToolTip="New Project" Height="20" Width="20">
+            <Image Source="/Images/new-file-icon.png"/>
+        </Button>
+        <Button ToolTip="Open Project" Height="20" Width="20">
+            <Image Source="/Images/open-file-icon.png"/>
+        </Button>
+        <Button ToolTip="Save" Height="20" Width="20">
+            <Image Source="/Images/Save-icon.png"/>
+        </Button>
+        <Separator/>
+        <Button ToolTip="Undo" Height="20" Width="20">
+            <Image Source="/Images/arrow-undo-icon.png"/>
+        </Button>
+        <Button ToolTip="Redo" Height="20" Width="20">
+            <Image Source="/Images/arrow-redo-icon.png"/>
+        </Button>
+        <Separator/>
+        <Button ToolTip="Bold" Command="" Height="20" Width="20">
+            <Image Source="/Images/Editing-Bold-icon.png"/>
+        </Button>
+        <Button ToolTip="Italic" Command="" Height="20" Width="20">
+            <Image Source="/Images/Editing-Italic-icon.png"/>
+        </Button>
+        <Button ToolTip="Underline" Command="" Height="20" Width="20">
+            <Image Source="/Images/Editing-Underline-icon.png"/>
+        </Button>
+    </ToolBar>
 </UserControl>
