--- a/wpf-tmca/View/UserControls/Toolbox.xaml
+++ b/wpf-tmca/View/UserControls/Toolbox.xaml
@@ -6,11 +6,13 @@
              xmlns:local="clr-namespace:wpf_tmca.View.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="150">
-    <StackPanel>
-        <Button Content="New Class" Command="{Binding AddClassCommand}" Width="100" Height="70" Margin="10"/>
-        <Separator Margin="5"/>
-        <Button Content="New Association" Command="{Binding AddAssociationCommand}" Width="100" Height="70" Margin="10"/>
-        <Separator Margin="5"/>
-        <Button Content="New TextBox" Command="{Binding AddTextBoxCommand}" Width="100" Height="70" Margin="10"/>
-    </StackPanel>
+    <Border BorderBrush="Black" BorderThickness="0,0,0.2,0">
+        <StackPanel>
+            <Button Content="New Class" Command="{Binding AddClassCommand}" Width="100" Height="70" Margin="10"/>
+            <Separator Margin="5"/>
+            <Button Content="New Association" Command="{Binding AddAssociationCommand}" Width="100" Height="70" Margin="10"/>
+            <Separator Margin="5"/>
+            <Button Content="New TextBox" Command="{Binding AddTextBoxCommand}" Width="100" Height="70" Margin="10"/>
+        </StackPanel>
+    </Border>
 </UserControl>
