--- a/wpf-tmca/View/UserControls/Association.xaml
+++ b/wpf-tmca/View/UserControls/Association.xaml
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-            
+        <Line Stroke="Black" StrokeThickness="3"/>
     </Grid>
 </UserControl>
