--- a/wpf-tmca/View/UserControls/Menubar.xaml
+++ b/wpf-tmca/View/UserControls/Menubar.xaml
@@ -66,7 +66,7 @@
             </MenuItem>
             <MenuItem Header="_View">
                 <MenuItem Header="Toolbox" IsCheckable="True" IsChecked="True"/>
-                <MenuItem Header="Statusbar" IsCheckable="True" IsChecked="True"/>
+                <MenuItem Header="Statusbar" IsCheckable="True" IsChecked="True" Command="{Binding HideStatusBarCommand}"/>
                 <Separator/>
                 <MenuItem Header="Zoom In">
                     <MenuItem.Icon>
