--- a/wpf-tmca/View/MainWindow.xaml
+++ b/wpf-tmca/View/MainWindow.xaml
@@ -7,6 +7,7 @@
         xmlns:viewModel="clr-namespace:wpf_tmca.ViewModel"
         xmlns:local="clr-namespace:wpf_tmca"
         mc:Ignorable="d"
+        xmlns:ec="clr-namespace:wpf_tmca.View.Components"
         Title="TMCA UML Editor" Height="600" Width="800" Icon="/Images/Holidays-Bat-icon.png">
     <Window.DataContext>
         <viewModel:MainViewModel />
@@ -17,7 +18,9 @@
         <userControls:Statusbar DockPanel.Dock="Bottom" Visibility="{Binding StatusBarVisability}"/>
         <userControls:Toolbox DockPanel.Dock="Left" Visibility="{Binding ToolBoxVisability}"/>
         <Canvas Name="myCanvas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" AllowDrop="True">
-            <!-- Canvas items here... -->
+            
+            <!-- Indsæt noget så det virker her -->
+            
         </Canvas>
     </DockPanel>
 </Window>
