--- a/wpf-tmca/View/MainWindow.xaml
+++ b/wpf-tmca/View/MainWindow.xaml
@@ -24,10 +24,16 @@
             <ItemsControl ItemsSource="{Binding Items}">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <Canvas />
+                        <Canvas/>
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <userControls:Class/>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
             </ItemsControl>
+            
 
            <ec:ItemsListBox x:Name="ItemControl" ItemsSource="{Binding Items}">
                 <i:Interaction.Triggers>
