--- a/wpf-tmca/View/Components/ItemContainer.xaml
+++ b/wpf-tmca/View/Components/ItemContainer.xaml
@@ -1,11 +1,11 @@
-﻿<ListBoxItem x:Name="listBoxItem" x:Class="wpf_tmca.View.Components.ItemContainer"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:wpf_tmca.View.Components"
-      mc:Ignorable="d" >
-
+﻿<ListBoxItem x:Class="wpf_tmca.View.Components.ItemContainer"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:wpf_tmca.View.Components"
+        mc:Ignorable="d">
+    
     <ListBoxItem.Template>
         <ControlTemplate TargetType="ListBoxItem">
 
