--- a/wpf-tmca/View/UserControls/Class.xaml
+++ b/wpf-tmca/View/UserControls/Class.xaml
@@ -4,15 +4,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:wpf_tmca.View.UserControls"
-             mc:Ignorable="d" 
-             d:DesignHeight="150" d:DesignWidth="150">
+             mc:Ignorable="d">
 
-    <DockPanel Name="ClassBox">
+    <DockPanel MinHeight="150" MinWidth="120" Name="ClassBox">
         <Border BorderThickness="1"/>
-        <TextBox DockPanel.Dock="Top" Background="Black" TextAlignment="Center" Name="TitleBox">
+        <TextBox DockPanel.Dock="Top" Background="Black" TextAlignment="Center" Name="TitleBox" Foreground="AntiqueWhite">
 
         </TextBox>
-        <TextBox VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TextAlignment="Left" Name="BodyBox">
+        <TextBox TextWrapping="Wrap" AcceptsReturn="True" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TextAlignment="Left" Name="BodyBox">
             
         </TextBox>
     </DockPanel>
