--- a/wpf-tmca/View/UserControls/Class.xaml
+++ b/wpf-tmca/View/UserControls/Class.xaml
@@ -6,7 +6,7 @@
              xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:cmd="clr-namespace:GalaSoft.MvvmLight.Command;assembly=GalaSoft.MvvmLight.Platform"
              xmlns:local="clr-namespace:wpf_tmca.View.UserControls"
-             Canvas.Left="{Binding X}" Canvas.Top="{Binding Y}" Width="{Binding Width}" Height="{Binding Height}" 
+             Canvas.Left="{Binding X}" Canvas.Top="{Binding Y}" 
              mc:Ignorable="d">
 
     <Grid>
