--- a/wpf-tmca/View/UserControls/Class.xaml
+++ b/wpf-tmca/View/UserControls/Class.xaml
@@ -6,28 +6,11 @@
              xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:cmd="clr-namespace:GalaSoft.MvvmLight.Command;assembly=GalaSoft.MvvmLight.Platform"
              xmlns:local="clr-namespace:wpf_tmca.View.UserControls"
-             Canvas.Left="{Binding X}" Canvas.Top="{Binding Y}" 
+             Canvas.Left="{Binding X}" Canvas.Top="{Binding Y}" Width="{Binding Width}" Height="{Binding Height}"
              mc:Ignorable="d">
 
     <Grid>
-        <Rectangle Fill="{Binding SelectedColor}" Stroke="Transparent" StrokeThickness="6"/>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-            <TextBlock Grid.Row="1" Text="Choose" TextAlignment="Center" FontWeight="Bold"/>
-            <TextBlock Grid.Row="3" Text="" TextAlignment="Center" FontWeight="Bold"/>
-        </Grid>
-        <Rectangle Opacity="{Binding DataContext.ModeOpacity, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}">
-            <Rectangle.Fill>
-                <RadialGradientBrush>
-                    <GradientStop Color="Black" Offset="0.0" />
-                </RadialGradientBrush>
-            </Rectangle.Fill>
+        <Rectangle Fill="{Binding SelectedColor}">
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="MouseDown">
                     <cmd:EventToCommand Command="{Binding DataContext.MouseDownItemCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" PassEventArgsToCommand="True"/>
