--- a/wpf-tmca/View/UserControls/Toolbox.xaml
+++ b/wpf-tmca/View/UserControls/Toolbox.xaml
@@ -12,7 +12,7 @@
         <StackPanel>
             <ToggleButton Content="New Class" IsChecked="{Binding IsAddingClassPressed}" Width="100" Height="70" Margin="10" />
             <Separator Margin="5"/>
-            <Button Content="New Association" Command="{Binding AddAssociationCommand}" Width="100" Height="70" Margin="10"/>
+            <ToggleButton Content="New Association" IsChecked="{Binding IsAddingAssociationPressed}" Width="100" Height="70" Margin="10"/>
             <Separator Margin="5"/>
             <ToggleButton Content="New TextBox" IsChecked="{Binding IsAddingTextBoxPressed}" Width="100" Height="70" Margin="10" />
         </StackPanel>
