--- a/wpf-tmca/View/UserControls/Menubar.xaml
+++ b/wpf-tmca/View/UserControls/Menubar.xaml
@@ -18,12 +18,12 @@
                     <Image Source="/Images/open-file-icon.png"/>
                 </MenuItem.Icon>
             </MenuItem>
-            <MenuItem Header="Save">
+            <MenuItem Header="Save" Command="{Binding SaveCommand}">
                 <MenuItem.Icon>
                     <Image Source="/Images/Save-icon.png"/>
                 </MenuItem.Icon>
             </MenuItem>
-            <MenuItem Header="Save As ..." Command="{Binding SaveCommand}">
+            <MenuItem Header="Save As ..." Command="{Binding SaveAsCommand}">
                 <MenuItem.Icon>
                     <Image Source="/Images/Save-as-icon.png"/>
                 </MenuItem.Icon>
